--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@tailwindcss/postcss": "^4.1.3",
     "eslint": "^9.24.0",
     "eslint-config-next": "15.1.6",
+    "lineicons": "^1.3.2",
+    "lucide-react": "^0.544.0",
     "next": "^15.3.0",
     "next-themes": "^0.2.1",
     "postcss": "^8.5.3",
