--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.58.0",
     "@tailwindcss/postcss": "^4.1.3",
+    "dotenv": "^17.2.2",
     "eslint": "^9.24.0",
     "eslint-config-next": "15.1.6",
     "lineicons": "^1.3.2",
