--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sentry/nextjs": "^10.17.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.58.0",
     "@tailwindcss/postcss": "^4.1.3",
+    "@upstash/ratelimit": "^2.0.6",
+    "@upstash/redis": "^1.35.4",
     "dotenv": "^17.2.2",
     "eslint": "^9.24.0",
     "eslint-config-next": "15.1.6",
@@ -24,7 +27,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "reactflow": "^11.11.4",
-    "tailwindcss": "^4.1.3"
+    "tailwindcss": "^4.1.3",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@types/node": "^20.8.9",
