--- a/package.json
+++ b/package.json
@@ -6,27 +6,43 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "type-check": "tsc --noEmit",
+    "clean": "rimraf .next out",
+    "validate": "npm run type-check && npm run lint && npm run format:check"
   },
   "dependencies": {
     "@sentry/nextjs": "^10.17.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.58.0",
     "@tailwindcss/postcss": "^4.1.3",
+    "@tiptap/extension-code-block-lowlight": "^3.6.5",
+    "@tiptap/extension-image": "^3.6.5",
+    "@tiptap/extension-link": "^3.6.5",
+    "@tiptap/extension-placeholder": "^3.6.5",
+    "@tiptap/react": "^3.6.5",
+    "@tiptap/starter-kit": "^3.6.5",
+    "@types/nprogress": "^0.2.3",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.4",
     "dotenv": "^17.2.2",
     "eslint": "^9.24.0",
     "eslint-config-next": "15.1.6",
     "lineicons": "^1.3.2",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.544.0",
     "next": "^15.3.0",
     "next-themes": "^0.2.1",
+    "nprogress": "^0.2.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "reactflow": "^11.11.4",
+    "swiper": "^12.0.2",
     "tailwindcss": "^4.1.3",
     "zod": "^4.1.11"
   },
