--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^17.2.2",
     "eslint": "^9.24.0",
     "eslint-config-next": "15.1.6",
+    "googleapis": "^162.0.0",
     "lineicons": "^1.3.2",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.544.0",
